style.css
* {
  box-sizing: border-box;  /* Include margin, padding and border in box sizes */
}

div {
  /* flex: initial; */
  text-align: left;
  border: 1px solid rgb(96, 139, 168);
  border-radius: 4px;
  background-color: rgba(154, 219, 240, .35);
}

p {
  font-size: 10px;
}

h1 {
  margin: unset;
}

.task {
  text-align: left;
  border: 1px solid rgb(96, 139, 168);
  border-radius: 10px;
  background-color: rgba(154, 219, 240, .6);
  grid-area: taskListing;
}

.container1 {
  display: grid;
  grid-template-columns: 10% 80% 10%;
  grid-template-rows: auto 10px;
  grid-gap: .3rem;
  background-color: transparent;
  border: none;
  overflow-y: scroll;
  grid-template-areas:
  '. header .'
  '. body .';
}

@media only screen and (min-width: 450px) {
  html {
    background-color: black;
  }

  body {
    max-width: 550px;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
  }

  .container2 {
    height: 430px;  // Why doesn't this work?
  }
}

.container2 {
  display: grid;
  grid-template-columns: 1% 10% 1% 83% 1%;
  grid-template-rows: auto auto auto;
  grid-gap: .3rem;
  /* justify-items: center; */
  background-color: transparent;
  border: none;
  height: 430px;
  overflow-y: scroll;
  grid-template-areas:
  '. . . taskHeader .'
  '. timeBar . taskListing .'
  '. . . taskFooter .';
}

#nowSpan {
  border-bottom: 3px solid rgba(255, 0, 0, 1.0);
  grid-area: timeBar;
  z-index: 999;
}

#timeDiv {
  display: flex;
  flex-direction: column;
  background-color: transparent;
  /* background-color: red; */
  border: none;
  width: 100%;
  height: 1440px;
  align-items: center;
  grid-area: timeBar;
}

.halfHours1,
.halfHours2 {
  background-color: transparent;
  /* background-color: blue; */
  padding: 0px;
  border: none;
  border-radius: 0px;
  /* width: 41px; */
  height: 2.0833%;
  font-size: 14px;
  /* text-align: center; */
  border-top: 1px solid rgba(154, 219, 240, 1.0);
}

.halfHours1 {
  height: 1.0417%;
}

#taskDiv {
  display: flex;
  flex-direction: column;
  background-color: transparent;
  border: none;
  height: 1440px;
  width: 100%;
  grid-area: taskListing;
}

.isNullTime {
  background-color: white;
  border: 1px solid rgba(154, 219, 240, 1.0);
  border-radius: 10px;
}

/* .dontTouch {
  cursor: not-allowed; */
  /* pointer-events: none; */
/* } */

.pause {
  border: none;
  background-color: rgba(154, 219, 240, .25);
  box-shadow: 0px 0px 3px 2px rgba(152, 250, 172, 0.56);
}

.isFuzzy {
  border: 1px solid rgba(154, 219, 240, 1.0);
  border-radius: 10px;
  background-color: rgba(154, 219, 240, .25);
  box-shadow: 0px 0px 3px 2px rgba(154, 219, 240, .25);
}

input {
  width: 160px;
  padding-left: 8px;
  border-radius: 10px;
}

.centerWrapper {
  text-align: center;
  background-color: transparent;
  border: none;
}

.controlButton {
  text-align: center;
  width: 10%;
  height: 22px;
  border: 1px solid rgb(96, 139, 168);
  border-radius: 10px;
}

#message {
  display: flex;
  text-align: center;
  grid-area: header;
}

#upButton,
#nowButton,
#editButton {
  width: 10%;
  font-size: 10px;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
}

.button-disabled{
  cursor: not-allowed;
  /* pointer-events: none; */
  border: none;
  background-image: linear-gradient(#c5c5f6, #c2e6f2, #c2e6f2, #c2e6f2,#c5c5f6) !important;
}

#zoom,
#settings {
  text-align: left;
  width: auto;
  font-size: 15px;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
}

#topButton {
  width: 80%;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0);
  grid-area: taskHeader;
}

#bottomButton {
  width: 80%;
  background-image: linear-gradient(#9adbf0, #9adbf0, #9adbf0, #9898ff);
  grid-area: taskFooter;
}


.isClicked {
  transform: rotateX(10deg);
  border: 1px solid rgb(255, 50, 255);
}

button:hover,
button:focus {
  /* transform: scaleY(1.2); */
  transform: rotateX(10deg);
  border: 1px solid rgb(255, 50, 255);
}

/* .time {
text-align: center;
width: 27px;
height: 19px;
border: 2px outset #9898ff;
border-radius: 5px;
background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
}

.usedTime {
text-align: center;
width: 27px;
height: 19px;
border: 2px inset #9898ff;
border-radius: 5px;
background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
} */

/* div[data-minutes='0'] {
  height: 30px;
}

div[data-minutes='30'] {
  height: 15px;
} */

/* div:nth-child(odd) {
  background-color: rgba(96, 139, 168, 0.4);
}

div:nth-child(even) {
  background-color: rgba(96, 139, 168, .2);
} */
/*
.div1 {
  background-color: rgba(96, 139, 168, .2)
}

.div2 {
  background-color: rgba(255, 255, 255, .2)
} */

/* .box {
  display: inline;
  align-items: end;
  justify-content: center;
}

.box1 {
  display: flex;
  align-items: start;
  justify-content: center;
}

div {
  flex: initial;
  height: 40px;
  text-align: center;
  padding-top: 50px;
  border: 1px solid rgb(96, 139, 168);
  border-radius: 25px;
  background-color: rgba(96, 139, 168, .2) !important;
}

.mid {
  height: 100px;
  padding-top: 130px;
  padding-bottom: 0px;
}

.thumb {
  padding: 10px;
  height: 50px;
  width: 50px;
} */


/* .day {
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;
} */

